Added a search
